src/main/java/br/ufsc/ine/agent_project/antlr4/AgentParser.java
// Generated from Agent.g4 by ANTLR 4.5
package br.ufsc.ine.agent_project;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AgentParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		BELIEFS=18, DESIRES=19, INTENTIONS=20, PLANS=21, LCLETTER=22, UCLETTER=23, 
		DIGIT=24, WS=25;
	public static final int
		RULE_agent = 0, RULE_contextDeclare = 1, RULE_primitiveContext = 2, RULE_customContext = 3, 
		RULE_type = 4, RULE_plan = 5, RULE_action = 6, RULE_somethingToBeTrue = 7, 
		RULE_compoundaction = 8, RULE_preconditions = 9, RULE_postconditions = 10, 
		RULE_formulas = 11, RULE_bridgeRules = 12, RULE_head = 13, RULE_body = 14, 
		RULE_propClause = 15, RULE_folClause = 16, RULE_propLogExpr = 17, RULE_folLogExpr = 18, 
		RULE_character = 19;
	public static final String[] ruleNames = {
		"agent", "contextDeclare", "primitiveContext", "customContext", "type", 
		"plan", "action", "somethingToBeTrue", "compoundaction", "preconditions", 
		"postconditions", "formulas", "bridgeRules", "head", "body", "propClause", 
		"folClause", "propLogExpr", "folLogExpr", "character"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "':'", "'_'", "'prop'", "'fol'", "'plan'", "','", 
		"'action'", "'['", "']'", "':-'", "'.'", "'!'", "'not'", "'and'", "'or'", 
		"'beliefs'", "'desires'", "'intentions'", "'plans'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "BELIEFS", "DESIRES", "INTENTIONS", 
		"PLANS", "LCLETTER", "UCLETTER", "DIGIT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Agent.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AgentParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AgentContext extends ParserRuleContext {
		public List<ContextDeclareContext> contextDeclare() {
			return getRuleContexts(ContextDeclareContext.class);
		}
		public ContextDeclareContext contextDeclare(int i) {
			return getRuleContext(ContextDeclareContext.class,i);
		}
		public List<BridgeRulesContext> bridgeRules() {
			return getRuleContexts(BridgeRulesContext.class);
		}
		public BridgeRulesContext bridgeRules(int i) {
			return getRuleContext(BridgeRulesContext.class,i);
		}
		public AgentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterAgent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitAgent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitAgent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentContext agent() throws RecognitionException {
		AgentContext _localctx = new AgentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_agent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << BELIEFS) | (1L << DESIRES) | (1L << INTENTIONS) | (1L << PLANS))) != 0)) {
				{
				{
				setState(40);
				contextDeclare();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(46);
				bridgeRules();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextDeclareContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FormulasContext formulas() {
			return getRuleContext(FormulasContext.class,0);
		}
		public PrimitiveContextContext primitiveContext() {
			return getRuleContext(PrimitiveContextContext.class,0);
		}
		public CustomContextContext customContext() {
			return getRuleContext(CustomContextContext.class,0);
		}
		public ContextDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contextDeclare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterContextDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitContextDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitContextDeclare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextDeclareContext contextDeclare() throws RecognitionException {
		ContextDeclareContext _localctx = new ContextDeclareContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_contextDeclare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			switch (_input.LA(1)) {
			case BELIEFS:
			case DESIRES:
			case INTENTIONS:
			case PLANS:
				{
				setState(52);
				primitiveContext();
				}
				break;
			case T__3:
				{
				setState(53);
				customContext();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(56);
			match(T__0);
			setState(57);
			type();
			setState(58);
			match(T__1);
			setState(59);
			match(T__2);
			setState(60);
			formulas();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveContextContext extends ParserRuleContext {
		public TerminalNode BELIEFS() { return getToken(AgentParser.BELIEFS, 0); }
		public TerminalNode DESIRES() { return getToken(AgentParser.DESIRES, 0); }
		public TerminalNode INTENTIONS() { return getToken(AgentParser.INTENTIONS, 0); }
		public TerminalNode PLANS() { return getToken(AgentParser.PLANS, 0); }
		public PrimitiveContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveContext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterPrimitiveContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitPrimitiveContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitPrimitiveContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveContextContext primitiveContext() throws RecognitionException {
		PrimitiveContextContext _localctx = new PrimitiveContextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primitiveContext);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BELIEFS) | (1L << DESIRES) | (1L << INTENTIONS) | (1L << PLANS))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CustomContextContext extends ParserRuleContext {
		public List<CharacterContext> character() {
			return getRuleContexts(CharacterContext.class);
		}
		public CharacterContext character(int i) {
			return getRuleContext(CharacterContext.class,i);
		}
		public List<TerminalNode> LCLETTER() { return getTokens(AgentParser.LCLETTER); }
		public TerminalNode LCLETTER(int i) {
			return getToken(AgentParser.LCLETTER, i);
		}
		public List<TerminalNode> UCLETTER() { return getTokens(AgentParser.UCLETTER); }
		public TerminalNode UCLETTER(int i) {
			return getToken(AgentParser.UCLETTER, i);
		}
		public CustomContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customContext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterCustomContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitCustomContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitCustomContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CustomContextContext customContext() throws RecognitionException {
		CustomContextContext _localctx = new CustomContextContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_customContext);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				match(T__3);
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(70); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(69);
					_la = _input.LA(1);
					if ( !(_la==LCLETTER || _la==UCLETTER) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(72); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCLETTER) | (1L << UCLETTER) | (1L << DIGIT))) != 0)) {
				{
				{
				setState(74);
				character();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_la = _input.LA(1);
			if ( !(_la==T__4 || _la==T__5) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlanContext extends ParserRuleContext {
		public SomethingToBeTrueContext somethingToBeTrue() {
			return getRuleContext(SomethingToBeTrueContext.class,0);
		}
		public CompoundactionContext compoundaction() {
			return getRuleContext(CompoundactionContext.class,0);
		}
		public PreconditionsContext preconditions() {
			return getRuleContext(PreconditionsContext.class,0);
		}
		public PostconditionsContext postconditions() {
			return getRuleContext(PostconditionsContext.class,0);
		}
		public PlanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterPlan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitPlan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitPlan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlanContext plan() throws RecognitionException {
		PlanContext _localctx = new PlanContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_plan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__6);
			setState(83);
			match(T__0);
			setState(84);
			somethingToBeTrue();
			setState(85);
			match(T__7);
			setState(86);
			compoundaction();
			setState(87);
			match(T__7);
			setState(88);
			preconditions();
			setState(89);
			match(T__7);
			setState(90);
			postconditions();
			setState(91);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public PreconditionsContext preconditions() {
			return getRuleContext(PreconditionsContext.class,0);
		}
		public PostconditionsContext postconditions() {
			return getRuleContext(PostconditionsContext.class,0);
		}
		public PropClauseContext propClause() {
			return getRuleContext(PropClauseContext.class,0);
		}
		public FolClauseContext folClause() {
			return getRuleContext(FolClauseContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__8);
			setState(94);
			match(T__0);
			setState(97);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(95);
				propClause();
				}
				break;
			case 2:
				{
				setState(96);
				folClause();
				}
				break;
			}
			setState(99);
			match(T__7);
			setState(100);
			preconditions();
			setState(101);
			match(T__7);
			setState(102);
			postconditions();
			setState(103);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SomethingToBeTrueContext extends ParserRuleContext {
		public PropClauseContext propClause() {
			return getRuleContext(PropClauseContext.class,0);
		}
		public FolClauseContext folClause() {
			return getRuleContext(FolClauseContext.class,0);
		}
		public SomethingToBeTrueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_somethingToBeTrue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterSomethingToBeTrue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitSomethingToBeTrue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitSomethingToBeTrue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SomethingToBeTrueContext somethingToBeTrue() throws RecognitionException {
		SomethingToBeTrueContext _localctx = new SomethingToBeTrueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_somethingToBeTrue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(105);
				propClause();
				}
				break;
			case 2:
				{
				setState(106);
				folClause();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompoundactionContext extends ParserRuleContext {
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public CompoundactionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundaction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterCompoundaction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitCompoundaction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitCompoundaction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompoundactionContext compoundaction() throws RecognitionException {
		CompoundactionContext _localctx = new CompoundactionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compoundaction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(109);
				match(T__9);
				setState(110);
				action();
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(111);
					match(T__7);
					setState(112);
					action();
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(118);
				match(T__10);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreconditionsContext extends ParserRuleContext {
		public PropClauseContext propClause() {
			return getRuleContext(PropClauseContext.class,0);
		}
		public FolClauseContext folClause() {
			return getRuleContext(FolClauseContext.class,0);
		}
		public PreconditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preconditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterPreconditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitPreconditions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitPreconditions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreconditionsContext preconditions() throws RecognitionException {
		PreconditionsContext _localctx = new PreconditionsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_preconditions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(122);
				propClause();
				}
				break;
			case 2:
				{
				setState(123);
				folClause();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostconditionsContext extends ParserRuleContext {
		public PropClauseContext propClause() {
			return getRuleContext(PropClauseContext.class,0);
		}
		public FolClauseContext folClause() {
			return getRuleContext(FolClauseContext.class,0);
		}
		public PostconditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postconditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterPostconditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitPostconditions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitPostconditions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostconditionsContext postconditions() throws RecognitionException {
		PostconditionsContext _localctx = new PostconditionsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_postconditions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(126);
				propClause();
				}
				break;
			case 2:
				{
				setState(127);
				folClause();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulasContext extends ParserRuleContext {
		public List<PropClauseContext> propClause() {
			return getRuleContexts(PropClauseContext.class);
		}
		public PropClauseContext propClause(int i) {
			return getRuleContext(PropClauseContext.class,i);
		}
		public List<PropLogExprContext> propLogExpr() {
			return getRuleContexts(PropLogExprContext.class);
		}
		public PropLogExprContext propLogExpr(int i) {
			return getRuleContext(PropLogExprContext.class,i);
		}
		public List<FolClauseContext> folClause() {
			return getRuleContexts(FolClauseContext.class);
		}
		public FolClauseContext folClause(int i) {
			return getRuleContext(FolClauseContext.class,i);
		}
		public List<FolLogExprContext> folLogExpr() {
			return getRuleContexts(FolLogExprContext.class);
		}
		public FolLogExprContext folLogExpr(int i) {
			return getRuleContext(FolLogExprContext.class,i);
		}
		public List<PlanContext> plan() {
			return getRuleContexts(PlanContext.class);
		}
		public PlanContext plan(int i) {
			return getRuleContext(PlanContext.class,i);
		}
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public FormulasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formulas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterFormulas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitFormulas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitFormulas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulasContext formulas() throws RecognitionException {
		FormulasContext _localctx = new FormulasContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_formulas);
		int _la;
		try {
			setState(169);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LCLETTER) {
					{
					{
					setState(135);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						setState(130);
						propClause();
						}
						break;
					case 2:
						{
						{
						setState(131);
						propClause();
						setState(132);
						match(T__11);
						setState(133);
						propLogExpr(0);
						}
						}
						break;
					}
					setState(137);
					match(T__12);
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LCLETTER) {
					{
					{
					setState(149);
					switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
					case 1:
						{
						setState(144);
						folClause();
						}
						break;
					case 2:
						{
						{
						setState(145);
						folClause();
						setState(146);
						match(T__11);
						setState(147);
						folLogExpr(0);
						}
						}
						break;
					}
					setState(151);
					match(T__12);
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6 || _la==T__8) {
					{
					{
					setState(160);
					switch (_input.LA(1)) {
					case T__6:
						{
						setState(158);
						plan();
						}
						break;
					case T__8:
						{
						setState(159);
						action();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(162);
					match(T__12);
					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BridgeRulesContext extends ParserRuleContext {
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public BridgeRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bridgeRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).enterBridgeRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentListener ) ((AgentListener)listener).exitBridgeRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentVisitor ) return ((AgentVisitor<? extends T>)visitor).visitBridgeRules(this);
			else return visitor.visitChildren(this);
		}
	}
